tests/invalid/test_may_export_body.err_exp3
test_may_export_body.m:039: Error: the `may_export_body' attribute on the
test_may_export_body.m:039:   foreign_proc contradicts the `no_inline' pragma
test_may_export_body.m:039:   on the predicate.
